# GeneAlias

./: README.md  pyproject.toml
src/genealias/: __init__.py  aliases.py  gene_alias.py
tests/: test_aliases.py  test_gene_alias.py
