[build-system]
requires = ["setuptools >= 69", "setuptools-scm >= 8"]
build-backend = "setuptools.build_meta"

[project]
name = "genealias"
dynamic = ["version"]
requires-python = ">=3.8"
dependencies = [
    "httplib2 >= 0.31.2",
]
description = "Builds a dictionary of gene aliases"
authors = [
  {name = "John Edgar", email = "edgarjohnmichael@gmail.com"},
]
license-files = ["LICENSE"]
keywords = ["gene", "dna", "rna"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[project.urls]
Respository = "https://github.com/stemcellbioengineering/GeneAlias"
Issues = "https://github.com/stemcellbioengineering/GeneAlias/issues"

[project.optional-dependencies]
test = ["pytest >= 8"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]